--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,10 @@
           </div>
           
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/my-process">My Process</a>
+            <a href="{{ site.baseurl }}/ux-work">UX Work</a>
+            <a href="{{ site.baseurl }}/software-development">Software Development</a>
+            <a href="{{ site.baseurl }}/resume">Resume</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
