--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: $white;
+  background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -61,7 +61,7 @@ h3 {
 
 h4 {  
   font-size: 18px;
-  color: $gray;
+  color: #D6797B;
 }
 
 p {
