--- a/style.scss
+++ b/style.scss
@@ -205,6 +205,14 @@ img {
   }
 }
 
+.bar-graph {
+margin-top: 50px;
+border-top: 1px solid #ddd;
+border-bottom: 1px solid #ddd;
+background-color: $lightGray;
+}
+
+
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
