--- a/style.scss
+++ b/style.scss
@@ -208,8 +208,7 @@ img {
 .bar-graph {
   padding: 5px;
   margin-top: 10px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+  border: 1px solid #ddd;
   background-color: $lightGray;
 }
 
