--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -6,6 +6,10 @@
 // Colors
 $blue: #4183C4; 
 $pink: #D6797B;
+$darkMagenta: #57102C;
+$magenta: #AA2159;
+$teal: #009D97;
+$darkTeal: #0F5959;
 
 // Grays
 $black: #000;
