--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
   background: $white;
-  font: 18px/1.4 $helvetica;
+  font: 18px/1.4 $bodyFont;
   color: $darkGray;
 }
 
@@ -31,7 +31,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
+  font-family: $headerFont;
   color: $darkerGray;
   font-weight: bold;
   
@@ -189,7 +189,7 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: $helveticaNeue; 
+  font-family: $headerFont; 
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
@@ -218,7 +218,7 @@ img {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue; 
+  font-family: $navFont; 
   font-size: 18px;
   
   @include mobile {
