--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -20,8 +20,8 @@ $lightGray: #eee;
 $white: #fff;
 
 // Font stacks
-$navFont: 'Montserrat', Helvetica, Arial, sans-serif;
-$headerFont: 'Montserrat', Helvetica, Arial, sans-serif;
+$navFont: 'Belleza', Helvetica, Arial, sans-serif;
+$headerFont: 'Belleza', Helvetica, Arial, sans-serif;
 $bodyFont: 'Montserrat', Helvetica, Arial, sans-serif;
 
 $helvetica: Helvetica, Arial, sans-serif;
