--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -20,7 +20,7 @@ $lightGray: #eee;
 $white: #fff;
 
 // Font stacks
-$navFont: 'Montserrat', Helvetica, Arial, sans-serif;
+$navFont: Helvetica, Arial, sans-serif;
 $headerFont: 'Montserrat', Helvetica, Arial, sans-serif;
 $bodyFont: 'Belleza', Helvetica, Arial, sans-serif;
 
