--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -21,9 +21,9 @@ $lightGray: #eee;
 $white: #fff;
 
 // Font stacks
-$navFont: Helvetica, 'Montserrat', Arial, sans-serif;
-$headerFont: 'Montserrat', Helvetica, Arial, sans-serif;
-$bodyFont: 'Belleza', Helvetica, Arial, sans-serif;
+$navFont: "Montserrat", "Helvetica Neue", Arial, sans-serif;
+$headerFont: "Belleza", Helvetica, Arial, sans-serif;
+$bodyFont: "Montserrat", Helvetica, Arial, sans-serif;
 
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
