--- a/style.scss
+++ b/style.scss
@@ -151,7 +151,7 @@ img {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $darkTeal;
+  border-bottom: 5px solid $darkTeal;
   
   @include mobile {
     text-align: center;
@@ -198,6 +198,7 @@ img {
 .site-description {
   margin: -5px 0 0 0;
   color: $gray;
+  font-family: $headerFont;
   font-size: 16px;
   
   @include mobile {
