--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -21,7 +21,7 @@ $lightGray: #eee;
 $white: #fff;
 
 // Font stacks
-$navFont: "Belleza", "Helvetica Neue", Arial, sans-serif;
+$navFont: "Montserrat", "Helvetica Neue", Arial, sans-serif;
 $headerFont: "Belleza", Helvetica, Arial, sans-serif;
 $bodyFont: "Montserrat", Helvetica, Arial, sans-serif;
 
