--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -21,10 +21,8 @@ $lightGray: #eee;
 $white: #fff;
 
 // Font stacks
-$navFont: "Montserrat", "Helvetica Neue", Arial, sans-serif;
-$headerFont: "Belleza", Helvetica, Arial, sans-serif;
-$bodyFont: "Montserrat", Helvetica, Arial, sans-serif;
-
+$montserrat: "Montserrat", "Helvetica Neue", Arial, sans-serif;
+$belleza: "Belleza", Helvetica, Arial, sans-serif;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
