--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
   background: $white;
-  font: 16px/1.4 $bodyFont;
+  font: 16px/1.4 $montserrat;
   color: $darkGray;
 }
 
@@ -31,7 +31,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $headerFont;
+  font-family: $belleza;
   color: $darkerGray;
   font-weight: bold;
   
@@ -189,7 +189,7 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: $headerFont; 
+  font-family: $belleza; 
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
@@ -198,7 +198,7 @@ img {
 .site-description {
   margin: -5px 0 0 0;
   color: $gray;
-  font-family: $headerFont;
+  font-family: $belleza;
   font-size: 16px;
   
   @include mobile {
@@ -218,8 +218,8 @@ img {
 
 nav {
   float: right;
-  margin-top: 39px; // @TODO: Vertically middle align
-  font-family: $navFont; 
+  margin-top: 43px; // @TODO: Vertically middle align
+  font-family: $montserrat; 
   font-size: 16px;
   
   @include mobile {
@@ -281,7 +281,7 @@ nav {
   margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  background-color: $teal;
+  background-color: $darkTeal;
 }
 
 footer {
