--- a/style.scss
+++ b/style.scss
@@ -211,8 +211,8 @@ img {
   margin-top: 10px;
   border: 1px solid $teal;
   background-color: $lightTeal;
+  font-family: $belleza;
   font-size: 12px;
-  
 }
 
 
