--- a/style.scss
+++ b/style.scss
@@ -110,6 +110,11 @@ img {
   max-width: 100%;
 }
 
+.small{
+  font-size: 12px;
+  font-weight: 300;
+}
+
 .date {
   font-style: italic;
   color: $gray;
