--- a/style.scss
+++ b/style.scss
@@ -80,7 +80,10 @@ a {
 ul, ol {
   margin: 15px 0;
   padding-left: 30px;
-  font-size:14px;
+  font-size: 14px;
+  li{
+  	margin:5px 0px;
+  }
 }
 
 ul {
