--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -24,6 +24,7 @@ $white: #fff;
 $montserrat: "Montserrat", "Helvetica Neue", Arial, sans-serif;
 $belleza: "Belleza", Helvetica, Arial, sans-serif;
 $helvetica: Helvetica, Arial, sans-serif;
+$openSans: "Open Sans", Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
 
