--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $belleza;
+  font-family: $montserrat;
   color: $darkerGray;
   font-weight: bold;
   
