--- a/style.scss
+++ b/style.scss
@@ -239,7 +239,7 @@ img {
 
 .bar-graph {
   padding: 5px;
-  margin: 0 10px;
+  margin: 3px 10px;
   border: 1px solid $teal;
   background-color: $lightTeal;
   font-family: $belleza;
