--- a/style.scss
+++ b/style.scss
@@ -221,6 +221,11 @@ img {
   }
 }
 
+.light-border {
+  border-radius: 4px;
+  border: 1px solid #d5d5d5;
+}
+
 .bar-graph-table {
   padding: 5px;
   margin: 20px;
