--- a/style.scss
+++ b/style.scss
@@ -224,6 +224,9 @@ img {
 .light-border {
   border-radius: 4px;
   border: 1px solid #d5d5d5;
+  margin:5px;
+  padding:5px;
+  height: 100%;
 }
 
 .bar-graph-table {
