--- a/style.scss
+++ b/style.scss
@@ -224,8 +224,7 @@ img {
 .light-border {
   border-radius: 4px;
   border: 1px solid #d5d5d5;
-  margin:5px;
-  padding:5px;
+  margin:10px 10px 10px 0px;
   height: 100%;
 }
 
