--- a/style.scss
+++ b/style.scss
@@ -228,11 +228,11 @@ img {
   height: 100%;
   
   .card-top{
-  	background:black; 
+  	background: $teal; 
   	width:100%; 
-  	height: 80px;
+  	height: 50px;
   	h3{
-  		margin:0px;
+  		margin:1em;
   		color: white;
   	}
   }
