--- a/style.scss
+++ b/style.scss
@@ -228,9 +228,9 @@ img {
   height: 100%;
   
   .card-top{
-  	background: $teal; 
+  	background: $darkTeal; 
   	width:100%; 
-  	height: 50px;
+  	height: 80px;
   	h3{
   		margin:1em;
   		color: white;
