--- a/style.scss
+++ b/style.scss
@@ -221,10 +221,27 @@ img {
   }
 }
 
+.left .card{
+	width: 256px;
+	margin:10px 10px 10px 0px;	
+}
+
+
+.middle .card{
+	width: 327px;
+	margin:10px 0px;	
+}
+
+
+.right .card{
+	width: 337px;
+	margin:10px 0px 10px 10px;	
+}
+
+
 .card {
   border-radius: 4px;
   border: 1px solid #d5d5d5;
-  margin:10px 10px 10px 0px;
   height: 100%;
   
   .card-top{
