--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
             <a href="{{ site.baseurl }}/software-development">Software Development</a>
             <a href="{{ site.baseurl }}/ux-work">UX Work</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseurl }}/resume">Resume</a>
+            <a href="{{ site.baseurl }}/Resume.pdf">Resume</a>
           </nav>
         </header>
       </div>
