--- a/style.scss
+++ b/style.scss
@@ -36,7 +36,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   
   line-height: 1.7;
-  margin: 1em 0 5px;
+  margin: 0;
   padding: 0;
 
   @include mobile {
@@ -213,7 +213,7 @@ img {
 .site-description {
   margin: -5px 0 0 0;
   color: $gray;
-  font-family: $belleza;
+  font-family: $montserrat;
   font-size: 16px;
   
   @include mobile {
